tests/expected_invalid_parse_missing_call_arg_comma.diag.out
<input>:7:11: error: expected ',' between arguments
        add(1 2)
              ^
